# topical-decoding

./: .gitignore  README.md  config.py  pyproject.toml  test_generate_function.ipynb  test_logits_process_approach.ipynb  topical_evaluations.py
LDA_250/: lda.model.state
NEWTS/: read.py
config/: experiment_config.py  score_and_plot_config.py
data/NEWTS/: topics.py  topicscore.py
data/outputs/: 50_summaries_with_articles.json  summaries.json
data/results_baseline/: baseline_gemma_2b_50_80_90_4.json
data/results_constant_shift/: constant_shift_gemma_2b_50_80_90_1.json
data/results_threshold_selection/: threshold_selection_gemma_2b_50_80_90_1.json
data/self_refine_data/: init_examples.json  iter_examples.json
data/topic_vectors_data/: topic_strings.json
notebooks/: LDA_exploration.ipynb  NEWTS_exploration.ipynb  plot_results.ipynb
notebooks/EDA_LDA_NEWTS/: NEWTS_exploration.ipynb  topical_tokens.ipynb
scripts/: test.sh
src/: plot_results.py  run_experiments.py  score_results.py
src/baseline/: baseline.ipynb
src/utils/: evaluation_utils.py  generation_utils.py  load_and_get_utils.py  text_processing_utils.py
topical_decoding/: config.py  topical_evaluations.py
topical_decoding/src/: self_refine_loader.py  topical_evaluations.py
topical_decoding/test/: test_generate_function.ipynb  test_logits_process_approach.ipynb  test_topical_evaluations_on_NEWTS.ipynb
topical_decoding/utils/: evaluation_utils.py  generation_utils.py  newts_utils.py  read_and_load_utils.py
utils/: evaluation_utils.py  read_and_load_utils.py
(+301 files in other folders)
